--- a/css/Hero-dad.css
+++ b/css/Hero-dad.css
@@ -93,5 +93,5 @@ footer ul li{
 
 
 header{
-	background-image: href="css/suit and tie.PNG";
+	background-image: url(https://worshiphousemedia.s3.amazonaws.com/images/main/s/mo/ora/mo/fathersdaysuitmotion3.jpg);
 }
